提交部分总结代码